RESOLVED FIXED292012
[Site Isolation] Fix Spell Check
https://bugs.webkit.org/show_bug.cgi?id=292012
Summary [Site Isolation] Fix Spell Check
Brandon
Reported 2025-04-24 09:17:55 PDT
There is an issue where an iframe will get the wrong bounding box coordinates and will draw the spell check UI in the upper left hand corner of the screen. It should be right underneath the text instead. To correct this we need to call convertRectToMainFrameCoordinates when we are showing the correction panel.
Attachments
Brandon
Comment 1 2025-04-24 09:18:05 PDT
Brandon
Comment 2 2025-04-24 09:21:05 PDT
EWS
Comment 3 2025-04-25 08:52:55 PDT
Committed 294111@main (c052807daec1): <https://commits.webkit.org/294111@main> Reviewed commits have been landed. Closing PR #44471 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.