[Site Isolation] Fix Spell Check https://bugs.webkit.org/show_bug.cgi?id=292012 rdar://117912363

Reviewed by Alex Christensen.

When calculating the bounding box, the inner iframe is not able to see the outer iframes location. To correct for this missing
information, the UI process will then correct the received bounding boxes location to draw the correct UI pop up.

* Source/WebCore/editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::show):
(WebCore::AlternativeTextController::timerFired):
* Source/WebCore/page/AlternativeTextClient.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showCorrectionPanel):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebCoreSupport/WebAlternativeTextClient.h:
* Source/WebKit/WebProcess/WebCoreSupport/mac/WebAlternativeTextClient.cpp:
(WebKit::WebAlternativeTextClient::showCorrectionAlternative):
* Source/WebKitLegacy/mac/WebCoreSupport/WebAlternativeTextClient.h:
* Source/WebKitLegacy/mac/WebCoreSupport/WebAlternativeTextClient.mm:
(WebAlternativeTextClient::showCorrectionAlternative):

Canonical link: https://commits.webkit.org/294111@main